<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.SearchDetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        app:cardCornerRadius="@dimen/card_corner_radius_standard"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_standard"
                android:minHeight="@dimen/min_height"
                android:src="@drawable/ic_back_arrow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_standard"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputDeparture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/transparent"
                    android:drawableEnd="@drawable/ic_arrows"
                    android:focusable="false"
                    android:hint="@string/search_placeholder_departure"
                    android:inputType="text"
                    android:minHeight="@dimen/min_height"
                    android:singleLine="true"
                    android:textSize="@dimen/body_large"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputArrival"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/transparent"
                    android:drawableEnd="@drawable/ic_close"
                    android:hint="@string/search_placeholder_arrival"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:minHeight="@dimen/min_height"
                    android:singleLine="true"
                    android:textSize="@dimen/body_large"
                    app:endIconMode="clear_text" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <HorizontalScrollView
        android:id="@+id/containerChipFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@+id/cvSearch">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_standard"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipReturnDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_return_date"
                app:chipIcon="@drawable/ic_plus" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDepartureDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTicketOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_ticket_options"
                android:textStyle="italic"
                app:chipIcon="@drawable/ic_profile" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_filter"
                app:chipIcon="@drawable/ic_filter" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFlightList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_medium"
        app:cardCornerRadius="@dimen/card_corner_radius_standard"
        app:layout_constraintTop_toBottomOf="@+id/containerChipFilters">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/flight_list_title"
                android:textSize="@dimen/title_large"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFlights"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_small" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btViewAllTickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/view_all_tickets_button"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/cvFlightList" />



</androidx.constraintlayout.widget.ConstraintLayout>